[package]
name = "dna"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
overflow-checks = false

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = {version = "0.4.2", features = ["parallel"]}
ark-ff = {version="0.4.2", features=["asm", "parallel"]}
ark-poly = {version="0.4.2", features=["parallel"]}
ark-serialize = "0.4.2"
ark-std = {version="0.4.0", features=["parallel"]}
base64 = "0.21.2"
base64-serde = "0.7.0"
bincode = "1.3.3"
clap = { version = "4.3.12", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.26"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.19"
memmap = "0.7.0"
rand = "0.8.5"
rayon = "1.7.0"
serde = {version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
